# lcad

./: LICENSE  meson.build  meson_options.txt  release.bat  release.sh  setup.bat
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
src/: await.hpp  git_hash.txt  git_tag.txt  lcad.cpp  main.cpp  main.hpp  meson.build
src/tests/: lcad.cpp  meson.build
subprojects/: .gitignore  lak.wrap
